--- a/CSS/style.css
+++ b/CSS/style.css
@@ -92,7 +92,7 @@ video {
 nav {
     display: flex;
     width: 100%;
-    padding: 0.5rem 0;
+    padding: 0 0 0.25rem 0;
     position: fixed;
     top: -10vh;
     left: 0;
@@ -100,7 +100,7 @@ nav {
     backdrop-filter: blur(8px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
     opacity: 0;
-    z-index: 10000;
+    z-index: 1000;
     transition:
         translate 500ms ease-out,
         opacity 200ms ease-out;
@@ -125,7 +125,7 @@ nav figure {
 }
 nav figure img {
     height: 100px;
-    scale: 2.5;
+    scale: 0.9;
 }
 .fa-angles-down {
     position: absolute;
@@ -135,6 +135,11 @@ nav figure img {
     color: var(--vert);
     animation: slide-bottom 1000ms ease-out infinite both;
 }
+/*==================    BARRE DE NAVIGATION ANIMATION D'APPARUTION    ==================*/
+.scrolled {
+    opacity: 1;
+    translate: 0 10vh;
+}
 @keyframes slide-bottom {
     0% {
         translate: 0 0;
@@ -143,11 +148,9 @@ nav figure img {
         translate: 0 100px;
     }
 }
-/*==================    BARRE DE NAVIGATION ANIMATION D'APPARUTION    ==================*/
-.scrolled {
-    opacity: 1;
-    translate: 0 10vh;
-}
+
+
+
 
 /*==================    FOOTER    ==================*/
 footer {
