--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,6 @@
 
     /*====    POLICES    ====*/
     --ff-titre: RUBIK;
-    --ff-sous-titre: LAILA;
     --ff-texte: AMIKO;
 
     /*====    TAILLES DE POLICES    ====*/
@@ -26,16 +25,12 @@
     font-family: RUBIK;
     src: url("FONT/Rubik-Italic-VariableFont_wght.ttf");
 
-    font-family: LAILA;
-    src: url("FONT/Laila-Regular.ttf");
-
     font-family: AMIKO;
     src: url("FONT/Amiko-Regular.ttf");
 }
+
 /*==================    REINITIALISATION    ==================*/
-*,
-::after,
-::before {
+*, ::after, ::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -50,6 +45,7 @@ body {
     width: 100%;
     font-family: var(--ff-texte);
 }
+
 /*==================    SCROLLBAR   ==================*/
 /* Pas supporté par IOS */
 ::-webkit-scrollbar {
@@ -70,6 +66,7 @@ a {
 li {
     list-style: none;
 }
+
 /*==================    STYLE PAR DEFAUT DU MAIN    ==================*/
 main {
     width: 100%;
@@ -86,6 +83,7 @@ header {
     background-color: rgba(0, 0, 0, 0.2);
 }
 .video_header {
+    overflow: clip;
     width: 100%;
     height: 100%;
     display: flex;
@@ -99,6 +97,7 @@ header {
 video {
     width: 100%;
 }
+
 /*==================    BARRE DE NAVIGATION    ==================*/
 nav {
     display: flex;
@@ -131,6 +130,7 @@ nav ul li a {
     color: var(--noir);
     font: italic bold var(--fs-titre) var(--ff-titre);
 }
+/*==================    LOGO    ==================*/
 nav figure {
     display: contents;
 }
@@ -138,27 +138,32 @@ nav figure img {
     height: 100px;
     scale: 0.9;
 }
-.fa-angles-down {
-    position: absolute;
-    bottom: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--vert);
-    animation: slide-bottom 1000ms ease-out infinite both;
-}
 /*==================    BARRE DE NAVIGATION ANIMATION D'APPARUTION    ==================*/
 .scrolled {
     opacity: 1;
     translate: 0 10vh;
 }
+
+/*==================    FLECHE QUI INDIQUE LE SCROLL    ==================*/
+.fa-angles-down {
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--vert);
+    animation: slide-bottom 1250ms ease-out infinite both;
+}
 @keyframes slide-bottom {
     0% {
+        opacity: 1;
         translate: 0 0;
     }
     100% {
-        translate: 0 100px;
+        opacity: 0;
+        translate: 0 75px;
     }
 }
+
 
 /*==================    FOOTER    ==================*/
 footer {
@@ -169,7 +174,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
 }
-footer section:not(:last-child) {
+footer section:not(.credit) {
     width: 50%;
     padding-bottom: 4rem;
 }
@@ -275,6 +280,7 @@ footer section:not(:last-child) {
 
 /*==================    COMPOSANTS BOUTONS    ==================*/
 button {
+    cursor: pointer;
     padding: 0.5rem 1.5rem;
     font: normal bold 1.25rem var(--ff-titre);
     outline: 3px solid transparent;
@@ -286,27 +292,27 @@ button {
         color 200ms ease-out,
         outline-color 200ms ease-out;
 }
-.button__vert {
+.boutton_vert {
     background-color: var(--vert);
     color: var(--noir);
     outline-color: var(--vert);
 }
-.button__noir {
+.boutton_noir {
     background-color: var(--noir);
     color: var(--blanc);
     outline-color: var(--noir);
 }
-.button__blanc-contour-noir {
+.boutton_blanc-contour-noir {
     background-color: var(--blanc);
     color: var(--noir);
     outline-color: var(--noir);
 }
-.button__blanc-contour-vert {
+.boutton_blanc-contour-vert {
     background-color: var(--blanc);
     color: var(--noir);
     outline-color: var(--vert);
 }
-.button__noir-contour-vert {
+.boutton_noir-contour-vert {
     background-color: var(--noir);
     color: var(--blanc);
     outline-color: var(--vert);
