--- a/css/accueil.css
+++ b/css/accueil.css
@@ -49,7 +49,7 @@ video {
 
 .artiste {
     margin: 1rem 0;
-    padding: 3rem 2rem;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
