--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 
     /*====    TAILLES DE POLICES    ====*/
     --fs-grand-titre: 2.5rem;
+    --fs-moyen-titre: 2rem;
     --fs-titre: 1.75rem;
     --fs-sous-titre: 1.5rem;
     --fs-normal: 1rem;
@@ -77,9 +78,10 @@ main {
 /*==================    HEADER    ==================*/
 header {
     width: 100%;
+    min-height: 15vh;
     position: relative;
     overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: var(--blanc);
 }
 
 /*==================    BARRE DE NAVIGATION    ==================*/
