--- a/css/accueil.css
+++ b/css/accueil.css
@@ -2,16 +2,15 @@ header{
     height: 100vh;
 }
 .video_header {
-    overflow: clip;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
+    /* position: relative;
     top: 0;
     left: 0;
-    z-index: -100;
+    z-index: -100; */
 }
 video {
     width: 100%;
