--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
     src: url("FONT/Rubik-Italic-VariableFont_wght.ttf");
 
     font-family: AMIKO;
-    src: url("FONT/Amiko-Regular.ttf");
+    src: url("./FONT/Amiko-Regular.ttf");
 }
 
 /*==================    REINITIALISATION    ==================*/
