--- a/css/galerie.css
+++ b/css/galerie.css
@@ -237,3 +237,9 @@
         border: 4px solid var(--noir);
         overflow: hidden;
 }
+
+h1 {
+    padding-top: 2rem;
+    text-align: center;
+    font: bold var(--fs-grand-titre) var(--ff-titre);
+}
