--- a/css/programmation.css
+++ b/css/programmation.css
@@ -1,63 +1,74 @@
-.artistes {
-    margin: 1rem 0;
-    padding: 2rem;
+:is(
+        .artistes,
+        .autres_activites,
+        .date,
+        .artistes__container article,
+        .autres_activites article,
+        .circle,
+        .autres_activites article figure
+    ) {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    gap: 2rem;
-    background-color: var(--vert);
 }
 
-.artistes article:first-child {
+:is(.artistes__container article, .autres_activites article, .circle) {
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+:is(.artistes, .autres_activites) {
+    margin: 1rem 0;
+    padding: 2rem;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.date {
     position: sticky;
     top: 13vh;
-    display: flex;
-    align-items: center;
     gap: 15rem;
     padding: 1rem;
     background-color: var(--violet);
 }
-h1 {
-    background-color: var(--violet);
+.date a {
+    font: bold var(--fs-sous-titre) var(--ff-titre);
 }
-.artistes article:last-child {
+
+.artistes__container{
+    position: relative;
+}
+.artistes__container article {
     padding: 1rem 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
     gap: 6rem;
     background-color: var(--violet);
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
 }
 .circle {
     width: 250px;
     height: 250px;
     border-radius: 50%;
+    overflow: hidden;
     background-color: var(--orange);
 }
 
-
-.autres_activites{
-    margin: 1rem 0;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-    background-color: var(--vert);
+.circle img{
+    height: 100%;
+    width: auto;
 }
 
-.autres_activites article{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.autres_activites article {
     gap: 2rem 4rem;
-    flex-wrap: wrap;
     padding: 3rem;
 }
-.autres_activites article figure{
+.autres_activites article figure {
     width: 623px;
     height: 359px;
     border-radius: 2rem;
-    background-color: var(--orange);
+    overflow: hidden;
 }
+ main h2{
+    font: bold var(--fs-titre) var(--ff-titre);
+ }
