ajout de la police amiko sur les pages

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
     src: url("FONT/Rubik-Italic-VariableFont_wght.ttf");
 
     font-family: AMIKO;
-    src: url("./FONT/Amiko-Regular.ttf");
+    src: url("https://fonts.googleapis.com/css2?family=Amiko:wght@400;600;700&display=swap");
 }
 
 /*==================    REINITIALISATION    ==================*/
