--- a/css/billeterie.css
+++ b/css/billeterie.css
@@ -130,6 +130,10 @@ h4 {
     position: relative;
 }
 
+.card h4 {
+    text-align: center;
+}
+
 .card::before{
     content: "";
     width: 100%;
