--- a/css/programmation.css
+++ b/css/programmation.css
@@ -40,7 +40,6 @@
 .artistes__container article {
     padding: 1rem 0;
     gap: 6rem;
-    background-color: var(--violet);
     /* position: absolute;
     top: 50%;
     left: 50%;
@@ -65,6 +64,10 @@
 .circle img {
     height: 100%;
     width: auto;
+}
+
+.img_scale {
+    scale: 1.2;
 }
 
 .autres_activites article {
